Import of RNEWSHAM/WebService-DPD-API-v0.0001 from CPAN.
gitpan-cpan-distribution: WebService-DPD-API
gitpan-cpan-version:      v0.0001
gitpan-cpan-path:         RNEWSHAM/WebService-DPD-API-v0.0001.tar.gz
gitpan-cpan-author:       RNEWSHAM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -12,4 +12,11 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: WebService-DPD-API
-version: 0.001_03
+requires:
+  HTTP::Request::Common: 0;
+  JSON: 0;
+  LWP::UserAgent: 0;
+  Moo: 0
+  URI::Escape: 0;
+  namespace::clean: 0;
+version: v0.0001
