Import of RNEWSHAM/WebService-DPD-API-v0.0002 from CPAN.
gitpan-cpan-distribution: WebService-DPD-API
gitpan-cpan-version:      v0.0002
gitpan-cpan-path:         RNEWSHAM/WebService-DPD-API-v0.0002.tar.gz
gitpan-cpan-author:       RNEWSHAM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -13,10 +13,10 @@ meta-spec:
   version: 1.4
 name: WebService-DPD-API
 requires:
-  HTTP::Request::Common: 0;
-  JSON: 0;
-  LWP::UserAgent: 0;
+  HTTP::Request::Common: 0
+  JSON: 0
+  LWP::UserAgent: 0
   Moo: 0
-  URI::Escape: 0;
-  namespace::clean: 0;
-version: v0.0001
+  URI::Escape: 0
+  namespace::clean: 0
+version: v0.0002
