--- a/dist.ini
+++ b/dist.ini
@@ -4,14 +4,14 @@ license = Perl_5
 copyright_holder = Richard Newsham
 copyright_year   = 2014
 
-version = v0.0001
+version = v0.0002
 
 [@Basic]
 
 [Prereqs]
 Moo = 0
-LWP::UserAgent = 0;
-HTTP::Request::Common = 0;
-URI::Escape = 0;
-JSON = 0;
-namespace::clean = 0;
+LWP::UserAgent = 0
+HTTP::Request::Common = 0
+URI::Escape = 0
+JSON = 0
+namespace::clean = 0
